--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 MONGODB_URI=mongodb://localhost/airbnb
+CLOUDINARY_CLOUD_NAME=hysteria
+CLOUDINARY_API_KEY=545485158726184
+CLOUDINARY_API_SECRET=9dUi9Zg2GB0rAFVA9tn1ZbpuTCY
 PORT=3000
